re PR target/28232 (Wrong aligned load is generated with -m4a on sh-*)

PR target/28232
	* config/sh/sh.c (expand_block_move): Use a BLKmode rather than
	SImode memory reference for the source of a movua.
	* config/sh/sh.md (UNSPEC_MOVUA): New macro.
	(movua): Use an unspec instead of sign_extract.  Expect the source
	to have mode BLKmode.
	(extv, insv): Use a BLKmode rather than SImode memory reference
	for the source of a movua.


Co-Authored-By: Kaz Kojima <kkojima@gcc.gnu.org>

From-SVN: r117961